# sengledwifipy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pull_request.yml  update_dev.yml
docs/source/: changelog.md.j2  changelog.rst  conf.py  index.rst  release_notes.md.j2  sengledwifipy.rst
sengledwifipy/: __init__.py  const.py  errors.py  helpers.py  sengledwifiapi.py  sengledwifilogin.py  sengledwifimqtt.py
