#  SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "SengledWifiPy"
version = "0.0.1"
description = "Python API to control Sengled Wifi Devices Programmatically."
authors = [
  "Cesar <gv4plolxe@mozmail.com>"
]
license = "Apache-2.0"
readme = 'README.md'
repository = "https://github.com/cpadil/sengledwifipy"
keywords = ['Sengled', 'Wifi', 'homeassistant']
include = ["LICENSE"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11, <4"
aiofiles = "^23.2.1"
simplejson = "*"
yarl = "*"
certifi = "*"
backoff = ">=2.2.1"
aiohttp = "^3.9.4"
paho-mqtt = "^2.0.0"
ruff = "^0.3.7"

[tool.poetry.group.dev.dependencies]
aresponses = "*"
mypy = "*"
pytest-aiohttp = "*"
pytest-cov = "*"
python-semantic-release = "^9.4.2"
safety = ">=1.8.7"
Sphinx = ">=3.5.0,<7.0.0"
tomlkit = ">=0.7.0"
sphinx-autoapi = ">=1.7.0"
sphinx-copybutton = ">=0.3.1"
sphinx-book-theme = "^1.1.2"
myst-parser = "^2.0.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs"
]
line-length = 130
indent-width = 4

[tool.ruff.format]
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

[tool.semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true