#  SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "SengledWifiPy"
version = "0.0.8"
description = "Python package to control Sengled Wifi Devices Programmatically."
authors = [
  "Cesar <gv4plolxe@mozmail.com>"
]
license = "Apache-2.0"
readme = 'README.md'
repository = "https://github.com/cpadil/sengledwifipy"
keywords = ['Sengled', 'Wifi', 'homeassistant']
include = ["LICENSE"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11, <4"
aiofiles = "^23.2.1"
simplejson = "*"
yarl = "*"
certifi = "*"
backoff = ">=2.2.1"
aiohttp = "^3.9.4"
paho-mqtt = "^2.0.0"
ruff = "^0.3.7"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest-aiohttp = "*"
pytest-cov = "*"
python-semantic-release = "^9.4.2"
safety = ">=1.8.7"
Sphinx = ">=3.5.0,<7.0.0"
tomlkit = ">=0.7.0"
sphinx-autoapi = ">=1.7.0"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
pre-commit = "^3.7.0"
commitizen = "^3.24.0"
pre-commit-hooks = "^4.6.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs"
]
line-length = 130
indent-width = 4
show-fixes = true

[tool.ruff.format]
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "D"]
ignore = ["F401", "D417"]

[tool.ruff.lint.isort]
known-first-party = ["sengledwifipy"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
commit_author = "semantic-release <semantic-release>"
commit_message = "[no ci] v{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.changelog]
template_dir = "docs/source/template"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
  "[no ci] v{version}\n\nAutomatically generated by python-semantic-release",
  "Merge branch",
  "Merge pull request",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = false
